--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-documents/picker": "^10.1.2",
+    "axios": "^1.8.4",
     "react": "19.0.0",
     "react-native": "0.79.0"
   },
