--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-native-documents/picker": "^10.1.2",
     "axios": "^1.8.4",
     "react": "19.0.0",
-    "react-native": "0.79.0"
+    "react-native": "0.79.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
