--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.8.4",
     "react": "19.0.0",
     "react-native": "0.79.0",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
