--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "axios": "^1.8.4",
     "react": "19.0.0",
     "react-native": "0.79.0",
+    "react-native-fs": "^2.20.0",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-permissions": "^5.3.0",
+    "react-native-vector-icons": "^10.2.0",
+    "rn-fetch-blob": "https://github.com/joltup/rn-fetch-blob/archive/refs/heads/master.tar.gz"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
