--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-documents/picker": "^10.1.2",
+    "@react-native-picker/picker": "^2.11.0",
     "axios": "^1.8.4",
     "react": "19.0.0",
     "react-native": "0.79.0",
